# epuck_aggregation

./: CMakeLists.txt  README.md  main.cpp
CONTROLLERS/: controller.h  ctrnn3Layers  ctrnn3Layers.cpp  ctrnn3Layers.h  ctrnn3Layers~  perceptron  perceptron.cpp  perceptron~  pfsm  pfsm.cpp  pfsm.cpp~  pfsm.h  pfsm.h~  pfsm~  simple3Layers~
DATA/: A.seed
EA/: chromosome.h  chromosome.h~  population.cpp  population.cpp~  population.h  population.h~  roulette_wheel.cpp  roulette_wheel.cpp~  roulette_wheel.h  roulette_wheel.h~
EVOSIM_installation/: EVOSIM_installation_guide.tex
EXP/: experiment.cpp  experiment.cpp~  experiment.h  experiment.h~  first_exp.cpp  first_exp.cpp~  first_exp.h~
GENOME/: D0_pop_G1640.geno
MISC/: general.h~  init_run.txt  init_run.txt~  parameters.cpp  parameters.cpp~  parameters.h  parameters.h~
RENDERING/: engine.cpp  engine.cpp~  engine.h  interface.cpp  interface.cpp~  interface.h  interface.h~  viewer.cpp  viewer.cpp~  viewer.h  viewer.h~
WORLD/: simple_agents.cpp  simple_agents.cpp~  simple_agents.h  simple_agents.h~  simple_objects.cpp  simple_objects.cpp~  simple_objects.h  simple_objects.h~  world_entity.h  world_entity.h~
